Handle DBus call finishing before buildUI is called

Evidentally from the backtrace buildUI is not called in the same event
as load, and async DBus calls fan finish in between.

BUG: 440223